# casual-memory

./: .gitignore  CHANGELOG.md  CLAUDE.md  README.md  STORAGE_IMPLEMENTATION_SUMMARY.md  pyproject.toml
.github/workflows/: ci.yml  codeql.yml  release.yml  stale.yml  tests.yml
docs/: ARCHITECTURE.md  MIGRATION.md  SQLALCHEMY_CONFLICT_STORE.md
examples/: basic_classification.py  conflict_detection_demo.py  custom_classifier.py  custom_storage_backend.py  embeddings_usage.py  memory_classification_flow.py  memory_extraction.py  memory_store_service_integration.py  using_llm_extractor.py
scripts/: BENCHMARKING_GUIDE.md  compare_memory_extraction.py
scripts/benchmark_conflict_classifier/: README.md  config_loader.py  run.py  test_cases.json
scripts/benchmark_conflict_classifier/configs/: models.json
scripts/benchmark_duplicate_classifier/: README.md  config_loader.py  run.py  test_cases.json
scripts/benchmark_duplicate_classifier/configs/: models.json
scripts/benchmark_nli_classifier/: README.md  run.py  test_cases.json
scripts/compare_memory_extraction/: README.md  config_loader.py  run.py
scripts/compare_memory_extraction/configs/: conversations.json  models.json  system_prompt.md
scripts/compare_memory_extraction/results/: memory_comparison_202512090421.md
src/casual_memory/: __init__.py  memory_service.py  models.py
src/casual_memory/classifiers/: __init__.py  auto_resolution_classifier.py  conflict_classifier.py  duplicate_classifier.py  models.py  nli_classifier.py  pipeline.py
src/casual_memory/embeddings/: __init__.py  e5_embedding.py  openai_embedding.py  protocol.py
src/casual_memory/execution/: __init__.py  action_executor.py  models.py
src/casual_memory/extractors/: __init__.py  assistant_extractor.py  base.py  llm_extractor.py  prompts.py  user_extractor.py
src/casual_memory/intelligence/: __init__.py  confidence.py  nli_filter.py  (+3 more)
tests/: test_action_executor.py  test_memory_service.py
tests/classifiers/: test_auto_resolution_classifier.py  test_conflict_classifier.py  test_duplicate_classifier.py  test_nli_classifier.py  test_pipeline.py
tests/embeddings/: test_e5_embedding.py  test_openai_embedding.py  test_protocol_compliance.py
tests/extractors/: __init__.py  test_llm_extractor.py
tests/integration/: __init__.py  conftest.py  test_memory_service_integration.py  test_qdrant_storage.py  test_redis_storage.py  test_sqlalchemy_storage.py
tests/intelligence/: __init__.py  test_confidence.py  test_conflict_verifier.py  test_duplicate_detector.py  test_nli_filter.py
tests/utils/: test_date_normalizer.py
(+19 files in other folders)
