[project]
name = "casual-memory"
version = "0.1.0"
description = "Intelligent semantic memory with conflict detection, classification pipeline, and storage abstraction"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
    { name = "Alex Stansfield", email = "your.email@example.com" }
]
keywords = ["memory", "llm", "ai", "semantic-memory", "conflict-detection", "chatbot"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

dependencies = [
    "casual-llm[openai]>=0.1.0",
    "pydantic>=2.0.0",
    "typing-extensions>=4.0.0",
]

[project.optional-dependencies]
transformers = [
    "sentence-transformers>=2.0.0",
    "torch>=2.0.0",
]
qdrant = [
    "qdrant-client>=1.7.0",
]
sqlalchemy = [
    "sqlalchemy>=2.0.0",
]
postgres = [
    "psycopg2-binary>=2.9.0",
    "sqlalchemy>=2.0.0",
]
redis = [
    "redis>=5.0.0",
]
dates = [
    "dateparser>=1.1.0",
]
all = [
    "casual-memory[transformers,qdrant,sqlalchemy,postgres,redis,dates]",
]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
]

[project.urls]
Homepage = "https://github.com/yourusername/casual-memory"
Documentation = "https://github.com/yourusername/casual-memory#readme"
Repository = "https://github.com/yourusername/casual-memory"
Issues = "https://github.com/yourusername/casual-memory/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/casual_memory"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-v --cov=casual_memory --cov-report=term-missing"

[tool.black]
line-length = 100
target-version = ["py310", "py311", "py312"]

[tool.ruff]
line-length = 100
target-version = "py310"
select = ["E", "F", "I", "N", "W"]
ignore = ["E501"]  # Line too long (handled by black)

[tool.mypy]
python_version = "3.10"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[dependency-groups]
dev = [
    "dotenv>=0.9.9",
]
